--- a/src/main/resources/com/merive/fxml/email.fxml
+++ b/src/main/resources/com/merive/fxml/email.fxml
@@ -8,41 +8,41 @@
    <Pane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #1B262C;">
       <TextArea fx:id="message" layoutX="22.0" layoutY="119.0" prefHeight="231.0" prefWidth="557.0" styleClass="text-area" stylesheets="@../css/email.css" wrapText="true">
          <font>
-            <Font name="Tahoma" size="14.0" />
+            <Font name="Roboto" size="14.0" />
          </font></TextArea>
       <Button layoutX="496.0" layoutY="361.0" mnemonicParsing="false" onAction="#send" prefHeight="28.0" prefWidth="83.0" style="-fx-background-color: #BBE1FA;" text="Send" textFill="#1b262c">
          <font>
-            <Font name="Tahoma" size="14.0" />
+            <Font name="Roboto" size="14.0" />
          </font>
       </Button>
       <TextField fx:id="title" layoutX="22.0" layoutY="72.0" prefHeight="36.0" prefWidth="557.0" promptText="Title" style="-fx-background-color: #BBE1FA;">
          <font>
-            <Font name="Tahoma" size="14.0" />
+            <Font name="Roboto" size="14.0" />
          </font>
       </TextField>
       <TextField fx:id="to" layoutX="22.0" layoutY="361.0" prefHeight="28.0" prefWidth="460.0" promptText="To" style="-fx-background-color: #BBE1FA;">
          <font>
-            <Font name="Tahoma" size="14.0" />
+            <Font name="Roboto" size="14.0" />
          </font>
       </TextField>
    </Pane>
    <Pane prefHeight="59.0" prefWidth="600.0" style="-fx-background-color: #1B262C; -fx-border-color: #BBE1FA; -fx-border-width: 3px;">
       <Label alignment="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="66.0" prefWidth="104.0" text="Email" textFill="#bbe1fa">
          <font>
-            <Font name="Tahoma" size="24.0" />
+            <Font name="Roboto" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="136.0" layoutY="25.0" text="Login" textFill="#bbe1fa">
+      <Label layoutX="130.0" layoutY="24.0" text="Login" textFill="#bbe1fa">
          <font>
-            <Font name="Tahoma" size="14.0" />
+            <Font name="Roboto" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="349.0" layoutY="25.0" text="Password" textFill="#bbe1fa">
+      <Label layoutX="350.0" layoutY="24.0" text="Password" textFill="#bbe1fa">
          <font>
-            <Font name="Tahoma" size="14.0" />
+            <Font name="Roboto" size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="login" layoutX="186.0" layoutY="22.0" style="-fx-background-color: #BBE1FA;" />
-      <PasswordField fx:id="password" layoutX="428.0" layoutY="22.0" style="-fx-background-color: #BBE1FA;" />
+      <TextField fx:id="login" layoutX="180.0" layoutY="23.0" style="-fx-background-color: #BBE1FA;" />
+      <PasswordField fx:id="password" layoutX="430.0" layoutY="23.0" style="-fx-background-color: #BBE1FA;" />
    </Pane>
 </AnchorPane>
