--- a/src/main/resources/com/merive/fxml/note.fxml
+++ b/src/main/resources/com/merive/fxml/note.fxml
@@ -8,31 +8,31 @@
     <Pane fx:id="pane" prefHeight="720.0" prefWidth="585.0" style="-fx-background-color: #1b262c;">
         <TextArea fx:id="text" layoutX="10.0" layoutY="59.0" prefHeight="647.0" prefWidth="565.0" styleClass="text-area" stylesheets="@../css/note.css" wrapText="true">
            <font>
-               <Font name="Tahoma" size="15.0" />
+               <Font name="Roboto" size="15.0" />
            </font>
         </TextArea>
         <Pane layoutX="-1.0" prefHeight="48.0" prefWidth="586.0" style="-fx-background-color: #BBE1FA;">
             <Button layoutX="80.0" layoutY="9.0" mnemonicParsing="false" onMouseClicked="#open" prefHeight="30.0"
                     prefWidth="160.0" style="-fx-background-color: #1b262c;" text="Open" textFill="#bbe1fa">
                 <font>
-                    <Font name="Tahoma" size="15.0"/>
+                    <Font name="Roboto" size="15.0"/>
                 </font>
             </Button>
             <Button layoutX="251.0" layoutY="9.0" mnemonicParsing="false" onMouseClicked="#save" prefHeight="30.0"
                     prefWidth="160.0" style="-fx-background-color: #1b262c;" text="Save" textFill="#bbe1fa">
                 <font>
-                    <Font name="Tahoma" size="15.0"/>
+                    <Font name="Roboto" size="15.0"/>
                 </font>
             </Button>
             <Button layoutX="418.0" layoutY="9.0" mnemonicParsing="false" onMouseClicked="#close" prefHeight="30.0"
                     prefWidth="160.0" style="-fx-background-color: #1b262c;" text="Close" textFill="#bbe1fa">
                 <font>
-                    <Font name="Tahoma" size="15.0"/>
+                    <Font name="Roboto" size="15.0"/>
                 </font>
             </Button>
             <Label layoutX="14.0" layoutY="10.0" text="Note" textFill="#1b262c">
                 <font>
-                    <Font name="Tahoma" size="24.0"/>
+                    <Font name="Roboto" size="24.0"/>
                 </font>
             </Label>
         </Pane>
