--- a/src/main/resources/com/merive/fxml/calculator.fxml
+++ b/src/main/resources/com/merive/fxml/calculator.fxml
@@ -4,96 +4,147 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="340.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.merive.CalculatorController">
-   <Pane prefHeight="340.0" prefWidth="300.0" style="-fx-background-color: #1B262C;">
-      <TextField fx:id="textField" accessibleRole="TEXT" alignment="CENTER_RIGHT" editable="false" layoutX="19.0" layoutY="16.0" prefHeight="50.0" prefWidth="262.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </TextField>
-      <Button layoutX="88.0" layoutY="279.0" mnemonicParsing="false" onAction="#clickClear" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="C" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
+<AnchorPane prefHeight="340.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.merive.CalculatorController">
+    <Pane prefHeight="340.0" prefWidth="300.0"
+          style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;">
+        <TextField fx:id="textField" accessibleRole="TEXT" alignment="CENTER_RIGHT" editable="false" layoutX="19.0"
+                   layoutY="16.0" prefHeight="50.0" prefWidth="262.0"
+                   style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px; -fx-text-fill: #bbe1fa;">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </TextField>
+        <Button layoutX="21.0" layoutY="279.0"  mnemonicParsing="false" onAction="#clickClear" prefHeight="50.0" prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="C" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
 
-      <Button layoutX="21.0" layoutY="84.0" mnemonicParsing="false" onAction="#click7" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="7" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="88.0" layoutY="84.0" mnemonicParsing="false" onAction="#click8" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="8" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="157.0" layoutY="84.0" mnemonicParsing="false" onAction="#click9" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="9" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="228.0" layoutY="84.0" mnemonicParsing="false" onAction="#clickDivision" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="/" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
+        <Button layoutX="21.0" layoutY="84.0" mnemonicParsing="false" onAction="#click7" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="7" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="88.0" layoutY="84.0" mnemonicParsing="false" onAction="#click8" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="8" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="157.0" layoutY="84.0" mnemonicParsing="false" onAction="#click9" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="9" textAlignment="CENTER" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="228.0" layoutY="84.0" mnemonicParsing="false" onAction="#clickDivision" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="/" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
 
-      <Button layoutX="21.0" layoutY="149.0" mnemonicParsing="false" onAction="#click4" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="4" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="88.0" layoutY="149.0" mnemonicParsing="false" onAction="#click5" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="5" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="157.0" layoutY="149.0" mnemonicParsing="false" onAction="#click6" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="6" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="228.0" layoutY="149.0" mnemonicParsing="false" onAction="#clickMulti" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="*" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
+        <Button layoutX="21.0" layoutY="149.0" mnemonicParsing="false" onAction="#click4" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="4" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="88.0" layoutY="149.0" mnemonicParsing="false" onAction="#click5" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="5" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="157.0" layoutY="149.0" mnemonicParsing="false" onAction="#click6" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="6" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="228.0" layoutY="149.0" mnemonicParsing="false" onAction="#clickMulti" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="*" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
 
-      <Button layoutX="21.0" layoutY="214.0" mnemonicParsing="false" onAction="#click1" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="1" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="88.0" layoutY="214.0" mnemonicParsing="false" onAction="#click2" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="2" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="157.0" layoutY="214.0" mnemonicParsing="false" onAction="#click3" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="3" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="228.0" layoutY="214.0" mnemonicParsing="false" onAction="#clickMinus" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="-" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
+        <Button layoutX="21.0" layoutY="214.0" mnemonicParsing="false" onAction="#click1" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="1" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="88.0" layoutY="214.0" mnemonicParsing="false" onAction="#click2" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="2" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="157.0" layoutY="214.0" mnemonicParsing="false" onAction="#click3" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="3" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="228.0" layoutY="214.0" mnemonicParsing="false" onAction="#clickMinus" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="-" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
 
-      <Button layoutX="21.0" layoutY="279.0" mnemonicParsing="false" onAction="#click0" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="0" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="157.0" layoutY="279.0" mnemonicParsing="false" onAction="#clickEqually" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="=" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="228.0" layoutY="279.0" mnemonicParsing="false" onAction="#clickPlus" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #BBE1FA; -fx-border-color: #0f4c75; -fx-border-width: 3px;" text="+" textFill="#1b262c">
-         <font>
-            <Font name="Roboto" size="14.0" />
-         </font>
-      </Button>
-   </Pane>
+        <Button layoutX="88.0" layoutY="279.0" mnemonicParsing="false" onAction="#click0" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="0" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="157.0" layoutY="279.0" mnemonicParsing="false" onAction="#clickEqually" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="=" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+        <Button layoutX="228.0" layoutY="279.0" mnemonicParsing="false" onAction="#clickPlus" prefHeight="50.0"
+                prefWidth="50.0"
+                style="-fx-background-color: #1B262C; -fx-border-color: #bbe1fa; -fx-border-width: 4px;"
+                stylesheets="@../css/launcher.css" text="+" textFill="#bbe1fa">
+            <font>
+                <Font name="Roboto Light" size="14.0"/>
+            </font>
+        </Button>
+    </Pane>
 </AnchorPane>
