Updated Email design
Updated few files

--- a/src/main/resources/com/merive/css/email.css
+++ b/src/main/resources/com/merive/css/email.css
@@ -1,7 +1,11 @@
 .text-area .content {
-    -fx-background-color: #BBE1FA;
+    -fx-background-color:  #1B262C;
 }
 
 .text-area {
-    -fx-background-color: #BBE1FA;
+    -fx-background-color:  #1B262C;
+}
+
+.button:hover {
+    -fx-effect: dropshadow(gaussian, #bbe1fa, 7, 0.25, 0.0, 0.0);
 }
