--- a/src/main/resources/com/merive/fxml/email.fxml
+++ b/src/main/resources/com/merive/fxml/email.fxml
@@ -74,7 +74,7 @@
         </Button>
         <ImageView fitHeight="33.0" fitWidth="33.0" layoutX="284.0" layoutY="11.0" pickOnBounds="true"
                    preserveRatio="true">
-            <Image url="@../icons/email_icon.png"/>
+            <Image url="@../icons/email.png"/>
         </ImageView>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="-3.0" prefHeight="62.0"
                prefWidth="60.0" text="Email" textFill="#bbe1fa">
