--- a/src/main/resources/com/merive/fxml/splash.fxml
+++ b/src/main/resources/com/merive/fxml/splash.fxml
@@ -8,7 +8,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.merive.MToolsSplash">
     <Pane layoutX="0.0" layoutY="0.0" mouseTransparent="true" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: linear-gradient(to left, #1A2A33, #0F4B72); -fx-border-color: #bbe1fa; -fx-border-width: 4px;">
         <ImageView fx:id="launcherImage" fitHeight="177.0" fitWidth="166.0" layoutX="33.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../icons/launcher_icon.png" />
+            <Image url="@../icons/launcher.png" />
         </ImageView>
         <Label fx:id="label" alignment="CENTER" contentDisplay="CENTER" layoutX="218.0" layoutY="111.0" prefHeight="177.0" prefWidth="468.0" text="MTools" textFill="#bbe1fa">
             <font>
