--- a/src/main/resources/com/merive/fxml/time.fxml
+++ b/src/main/resources/com/merive/fxml/time.fxml
@@ -35,7 +35,7 @@
         </Button>
         <ImageView fitHeight="33.0" fitWidth="33.0" layoutX="284.0" layoutY="11.0" pickOnBounds="true"
                    preserveRatio="true">
-            <Image url="@../icons/time_icon.png"/>
+            <Image url="@../icons/time.png"/>
         </ImageView>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="-3.0" prefHeight="62.0"
                prefWidth="74.0" text="Time" textFill="#bbe1fa">
